# AVSoft

./: .gitignore  CMakeLists.txt  README.md  lock_guard.h  main.cpp  mutex.cpp  mutex.h  settings.h  thread.h  utils.h  winapi_typedefs.h
